# c2025-a

./: .gitignore  CMakeLists.txt
level1/p01_running_letter/: main.c
level1/p02_is_prime/: main.c
level1/p03_all_primes/: main.c  test
level1/p04_goldbach/: main.c
level1/p05_encrypt_decrypt/: main.c
level1/p06_hanoi/: hanoi.c  main.c
level1/p07_maze/: main.c
level1/p08_push_boxes/: head.h  level.c  level1.txt  level2.txt  level3.txt  lib.c  main.c
level1/p08_push_boxes/levels/: 0.txt  1.txt  2.txt  3.txt  4.txt
level1/p09_linked_list/: main.c
level1/p10_warehouse/: main.c
课程设计/: README.md
课程设计/04AI_FIR/: CMakeLists.txt  五字棋AI.md
课程设计/04AI_FIR/inc/: ai_judge.h  display.h  input_storage.h
课程设计/04AI_FIR/src/: ai_judge.c  display.c  input_storage.c  main.c  test
